# multi-llm-nexus

./: .env.example  .gitignore  .workspace-tools.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  EXTERNAL_REVIEW.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml  requirements.txt  setup.sh  token_baseline.json
config/: adapters.yaml.example  identity.json.example  model_sources.yaml.example  pools.yaml.example  providers.yaml.example  providers.yaml.failover.example  security.yaml  sessions.json  skills_registry.yaml.example  thread_binding.yaml  tools.yaml.example  workspaces.yaml.example
config/specialists/: _template.md  financial.md.example  legal.md.example  marketing.md.example  operations.md.example
data/reviews/: 20260513_022600_engine.json  20260513_022942_bridge.json
docs/: AI_PROVIDER_REFERENCE.md  BUILDOUT_STATUS.md  POOL_ROUTING_REFACTOR.md  SYSTEM_DESIGN.md  api-key-setup-guide.md  citadel-tier.md  comparison.md  convergence-2026-06.md  gpu-pool-topology.md  lineage.md  local_llm_guide.md  phone-llm-cluster.md  provider-integration-roadmap.md  server-grade-builds.md
docs/installer/: wizard-v2.md
docs/mesh/: 01-overview.md  02-architecture.md  03-security.md  (+5 more)
examples/: failover_usage.py
scripts/: internal_review.py  model_check.py  rag_ingest.py  rate_monitor.py  token_eval.py
src/: main.py
tests/: conftest.py  test_capability_gate.py  test_claude_code.py  test_council.py  test_engine.py  test_identity.py  test_orchestrator.py  test_provider_chain.py
watchers/: install-cron.sh  wake-trigger.sh
(+108 files in other folders)
