[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "multi-llm-nexus"
version = "0.6.0"
description = "Platform-neutral AI agent platform — any LLM, any chat platform"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

dependencies = [
    "pyyaml>=6.0",
    "aiohttp>=3.9",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai    = ["openai>=1.30"]
gemini    = ["google-generativeai>=0.8"]
vertex    = ["google-generativeai>=0.8", "google-cloud-aiplatform>=1.50"]
cohere    = ["cohere>=5.0"]
bedrock   = ["boto3>=1.34"]
ollama    = ["httpx>=0.27"]
telegram  = ["python-telegram-bot>=21.0"]
all = [
    "anthropic>=0.30",
    "openai>=1.30",
    "google-generativeai>=0.8",
    "cohere>=5.0",
    "boto3>=1.34",
    "httpx>=0.27",
    "python-telegram-bot>=21.0",
]

[project.scripts]
nexus       = "src.main:main"
nexus-setup = "src.setup.wizard:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
